enum DiscountType { percentage, fixed }
