enum ReviewStatus {
  pending, // Chờ duyệt
  approved, // Đã duyệt
  rejected, // Từ chối
}
